property overflow-x fixed and sidebar

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: stretch;
   min-height: calc(100vh - 70px);
+
 }
 
 #sidebar {
@@ -35,26 +36,22 @@
     }
 
   .sidebar-button {
-    display:block;
+    display: flex;
+    align-items: center;
     font-weight: 300;
     width:100%;
     padding: 0.5em;
     text-decoration: none;
     color: #b3b3b3;
 
-
-
-    a {
-      font-weight: 300;
-      padding: 0.5em;
-      text-decoration: none;
-      color: #b3b3b3;
+    p {
+      margin: 0 3px;
     }
 
-    &:hover{
+    &:hover {
       background-color: #32353e;
       color:white;
-   }
+      }
   }
 }
 
