--- a/app/assets/stylesheets/pages/_property_show.scss
+++ b/app/assets/stylesheets/pages/_property_show.scss
@@ -1,6 +1,5 @@
 .property-show {
 
-  width: 88%;
   .info-card {
     background: white;
     padding: 1em;
